--- a/public/styles/signup.css
+++ b/public/styles/signup.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Patua+One&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+SC&display=swap');
 
 * {
     box-sizing: border-box;
@@ -12,8 +13,9 @@
 }
 
 body {
+    background: rgb(131,58,180);
+    background: radial-gradient(circle, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
     font-family: 'Noto Sans SC', sans-serif;
-    background-image: url('../images/tonight-alive-music-concert.jpg');
 }
 
 h1 {
