--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Patua+One&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans&display=swap');
 
 * {
     box-sizing: border-box;
