--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -1,4 +1,39 @@
+@import url('https://fonts.googleapis.com/css?family=Patua+One&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans&display=swap');
+
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    outline: 0;
+}
+
+.navbar-brand {
+    font-family: 'Patua One', cursive;
+    color: black;
+}
+.navbar-nav {
+    list-style-type: none;
+}
+
+.navbar-nav > li {
+    padding-left:30px;
+    padding-right:30px;
+    padding-top: 15px;
+}
+
+.user {
+    display: flex;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    color: black;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+}
+
 #map {
-    height: 900px;
+    height: 800px;
     margin-top: 20px;
 }
