--- a/views/profile.html
+++ b/views/profile.html
@@ -7,19 +7,17 @@
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="/public/styles/index.cs">
+    <link rel="stylesheet" href="/public/styles/profile.css">
     <!-- Google Maps API -->
     <script defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCHMNvp5mo44CBUMlTD72eqo53LYdde1IA"></script>
     <!-- CUSTOM JS -->
-    <script defer src="/public/scripts/index.js"></script>
+    <script defer src="/public/scripts/profile.js"></script>
     <title>concertVAULT</title>
 </head>
 <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">concertVAULT</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
         <li class="nav-item active">
@@ -38,6 +36,7 @@
         <div class="row">
             <div class="col-xs-12 col-md-6">
                 <div id="profile">
+                    <div class="user"></div>
                     <div class="row">
                         <div class="col">
                             <p>Name Here</p> TODO <!-- autofill username here -->
