--- a/views/signup.html
+++ b/views/signup.html
@@ -15,9 +15,6 @@
 <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">concertVAULT</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
         <li class="nav-item active">
@@ -35,7 +32,7 @@
     <h1>Start storing memories in concertVAULT</h1>
     <div class="container">
         <div class="card-deck">
-            <div class="card">
+            <div class="card-image">
                 <img class="card-img-top" src="../public/images/singer-with-microphone-like-karaoke-desing-neon-style_24908-60791.jpg" alt="singer">
             </div>
             <div class="card">
@@ -54,6 +51,7 @@
                     </form>
                 </div>
             </div>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
