--- a/views/signup.html
+++ b/views/signup.html
@@ -38,12 +38,12 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Sign Up</h5>
-                    <form method="post">
+                    <form class="form" method="post">
                         <div class="username">
                             <input type="text" placeholder="Username" name="name">
                         </div>
                         <div class="password">
-                            <input type="text" placeholder="Email" name="email">
+                            <input type="password" placeholder="Password" name="name">
                         </div>
                         <div class="button">
                             <button class="btn btn--pill btn--white" type="submit"></button>
