updated css for index, profile, signup

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -22,23 +22,6 @@
     padding-top: 15px;
 }
 
-h1 {
-    font-family: 'Patua One', cursive;
-    color: black;
-    z-index: 3;
-    position: absolute;
-    font-size: 400%;
-    padding-top: 5%;
-    padding-left: 3%;
-}
-
-.stroke {
-    color: white;
-    -webkit-text-fill-color: rgba(0,0,225,0);
-    -webkit-text-stroke-width: .01px;
-    -webkit-text-stroke-color: white;
-}
-
 body { 
     background: url('../images/tonight-alive-music-concert.jpg') no-repeat center center fixed; 
     -webkit-background-size: cover;
@@ -46,6 +29,21 @@ body {
     -o-background-size: cover;
     background-size: cover;
 }
+
+h1 {
+    font-family: 'Patua One', cursive;
+    color: white;
+    font-size: 400%;
+    padding-top: 5%;
+    padding-left: 3%;
+}
+
+/* .stroke {
+    color: black;
+    -webkit-text-fill-color: rgba(0,0,225,0);
+    -webkit-text-stroke-width: .01px;
+    -webkit-text-stroke-color: white;
+} */
 
 .container {
     display: flex;
