--- a/views/profile.html
+++ b/views/profile.html
@@ -36,19 +36,21 @@
         <div class="row">
             <div class="col-xs-12 col-md-6">
                 <div id="profile">
-                    <div class="user"></div>
+                    <div id="profile-container">
+                        <image id="profileImage" />
+                    </div>
                     <div class="row">
-                        <div class="col">
-                            <p>Name Here</p> TODO <!-- autofill username here -->
+                        <div class="col-md-6">
+                            <p>Name Here</p> 
                         </div>
-                        <div class="col">
-                            <p>Member since </p> TODO <!-- autofill year joined -->
+                        <div class="col-md-6">
+                            <p>Member since </p> 
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
                             <p>Concerts</p>
-                            <p></p> TODO <!-- list shows here -->
+                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -57,6 +59,7 @@
                 <div id="map"></div>
             </div>
         </div>
+        <button class="concert">Add Concert</button>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
