--- a/views/signup.html
+++ b/views/signup.html
@@ -31,13 +31,13 @@
     </nav>
     <h1>Start storing memories in concertVAULT</h1>
     <div class="container">
-        <div class="card-deck">
-            <div class="card-image">
-                <img class="card-img-top" src="../public/images/singer-with-microphone-like-karaoke-desing-neon-style_24908-60791.jpg" alt="singer">
+        <div class="row">
+            <div class="col-md-6">
+                <img  src="../public/images/singer-with-microphone-like-karaoke-desing-neon-style_24908-60791.jpg" alt="singer">
             </div>
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Sign Up</h5>
+            <div class="col-md-6" id="form">
+                <div >
+                    <h5 >Sign Up</h5>
                     <form class="form" method="post">
                         <div class="username">
                             <input type="text" placeholder="Username" name="name">
