--- a/views/addconcert.html
+++ b/views/addconcert.html
@@ -31,24 +31,24 @@
     </nav>
     <h1>Enter Concert Information</h1>
     <div class="container">
-        <form id="form" class="form">
-            <div class="form-control">
+        <form class="form">
+            <div class="form-group">
                 <label for="date">Date</label>
-                <input type="text" id="date" placeholder="Enter date">
+                <input type="text" class="form-control" id="date" placeholder="Enter date">
             </div>
-            <div class="form-control">
+            <div class="form-group">
                 <label for="venue">Venue</label>
-                <input type="text" id="venue" placeholder="Enter venue">
+                <input type="text" class="form-control" id="venue" placeholder="Enter venue">
             </div>
-            <div class="form-control">
+            <div class="form-group">
                 <label for="weather">Weather</label>
-                <input type="text" id="weather" placeholder="How was the weather?">
+                <input type="text" class="form-control" id="weather" placeholder="How was the weather?">
             </div>
-            <div class="form-control">
+            <div class="form-group">
                 <label for="concertBuddies">Concert Buddies</label>
-                <input type="text" id="concertBuddies" placeholder="Who did you go with?">
+                <input type="text" class="form-control" id="concertBuddies" placeholder="Who did you go with?">
             </div>
-            <button id="play">Press Play</button><button id="stop">Cancel</button>
+            <button id="play">Press Play</button><button id="stop">Press Pause</button>
         </form>
     </div>
 
