--- a/views/profile.html
+++ b/views/profile.html
@@ -39,7 +39,7 @@
                     <div id="profile-container">
                         <image id="profileImage" />
                     </div>
-                    <div class="row">
+                    <div class="row" id="user-info">
                         <div class="col-md-6">
                             <p>Name Here</p> 
                         </div>
@@ -48,18 +48,18 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col">
+                        <div class="col" id="concert">
                             <p>Concerts</p>
                             <p></p>
                         </div>
                     </div>
+                    <button class="add-concert">Add Concert</button>
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
                 <div id="map"></div>
             </div>
         </div>
-        <button class="concert">Add Concert</button>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
