--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -8,6 +8,10 @@
     outline: 0;
 }
 
+body {
+    background-color: whitesmoke;
+}
+
 .navbar-brand {
     font-family: 'Patua One', cursive;
     color: black;
@@ -24,7 +28,13 @@
 
 .container {
     font-family: 'Noto Sans', cursive;
-    padding-top: 8%;
+    padding-top: 5%;
+}
+
+#profile {
+    background-color: lightyellow;
+    width: 100%;
+    height: 100%;
 }
 
 #profile-container {
@@ -36,25 +46,21 @@
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
     border-radius: 50%;
+    background-color: lightslategray;
 }
 
-.user {
+#user-info {
     display: flex;
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    color: black;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
+    width: 100%;
+    height: 100%;
+    margin-top: 6%;
 }
 
-#map {
-    height: 600px;
-    margin-top: 20px;
+#concert {
+    display: flex;
 }
 
-.concert {
+.add-concert {
     cursor: pointer;
     background-color: #3498db;
     color: #fff;
@@ -64,4 +70,9 @@
     padding: 10px;
     margin-top: 20px;
     width: 40%;
+}
+
+#map {
+    height: 600px;
+    margin-top: 20px;
 }
