--- a/views/index.html
+++ b/views/index.html
@@ -30,11 +30,14 @@
     </div>
   </nav>
   <h1 class="stroke" id="title">concertVAULT</h1>
+  <container class="description">
+    <h2>Store your concert memories in concertVAULT</h2>
+  </container>
   <container class="container">
     <section>
       <form class="form-inline">
-        <input class="form-control mr-sm-2" id="search" type="search" placeholder="Search Artist/Concert/Venue" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <input class="form-control" id="search" type="search" placeholder="Search Artist/Concert/Venue" aria-label="Search">
+        <button class="btn" type="submit">Search</button>
       </form>
     </section>
   </container>
