--- a/views/signup.html
+++ b/views/signup.html
@@ -31,25 +31,23 @@
     </nav>
     <h1>Start storing memories in concertVAULT</h1>
     <div class="container">
-        <div class="row">
+        <div class="row no-gutters">
             <div class="col-md-6">
                 <img  src="../public/images/singer-with-microphone-like-karaoke-desing-neon-style_24908-60791.jpg" alt="singer">
             </div>
             <div class="col-md-6" id="form">
-                <div >
+                <form class="form">
                     <h5 >Sign Up</h5>
-                    <form class="form" method="post">
-                        <div class="username">
-                            <input type="text" placeholder="Username" name="name">
-                        </div>
-                        <div class="password">
-                            <input type="password" placeholder="Password" name="name">
-                        </div>
-                        <div class="button">
-                            <button class="btn btn--pill btn--white" type="submit"></button>
-                        </div>
-                    </form>
-                </div>
+                    <div class="form-group">
+                        <label for="username">Username</label>
+                        <input type="text" class="form-control" id="username" placeholder="Enter username">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="Password">
+                    </div>
+                    <button type="submit" class="btn btn-primary" id="button">Submit</button>
+                </form>
             </div>
         </div>
     </div>
