--- a/views/profile.html
+++ b/views/profile.html
@@ -7,27 +7,27 @@
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="/public/styles/profile.css">
+    <link rel="stylesheet" href="/styles/profile.css">
     <!-- Google Maps API -->
     <script defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCHMNvp5mo44CBUMlTD72eqo53LYdde1IA"></script>
     <!-- CUSTOM JS -->
-    <script defer src="/public/scripts/profile.js"></script>
+    <script defer src="/scripts/profile.js"></script>
     <title>concertVAULT</title>
 </head>
 <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">concertVAULT</a>
+        <a class="navbar-brand" href="/index">concertVAULT</a>
 
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
         <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/index">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Sign Up</a>
+            <a class="nav-link" href="/signup">Sign Up</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
+            <a class="nav-link" href="/login">Login</a>
             </li>
         </ul>
     </div>
