--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -18,6 +18,7 @@ a {
 }
 .navbar-nav {
     list-style-type: none;
+    float: right;
 }
 
 .navbar-nav > li {
@@ -35,7 +36,7 @@ body {
 h1 {
     font-family: 'Patua One', cursive;
     color: white;
-    font-size: 400%;
+    font-size: 300%;
     padding-top: 5%;
     padding-left: 3%;
     padding-bottom: 3%;
