--- a/views/index.html
+++ b/views/index.html
@@ -31,12 +31,12 @@
   </nav>
   <h1 class="stroke" id="title">concertVAULT</h1>
   <container class="description">
-    <h3>Store your concert memories in concertVAULT</h2>
+    <h3>Store your concert memories in concertVAULT</h3>
   </container>
   <container class="container">
     <section>
       <form class="form-inline">
-        <input class="form-control" id="search" type="search" placeholder="Search Artist/Concert/Venue" aria-label="Search">
+        <input class="form-control" id="search" type="search" placeholder="Artist/Concert/Venue" aria-label="Search">
         <button class="btn" type="submit">Search</button>
       </form>
     </section>
