--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -19,6 +19,7 @@
 .navbar-nav {
     list-style-type: none;
     float: right;
+    text-shadow: 2px 2px 6px #000000;
 }
 
 .navbar-nav > li {
@@ -62,6 +63,11 @@ a {
     color: #eb0450;
     text-shadow: 6px 6px 18px #FFFFFF;
     padding-top: 10%;
+}
+
+h3 {
+    font-weight: bolder;
+    font-size: 300;
 }
 
 .form-inline {
