--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -13,7 +13,8 @@ body {
 }
 
 a {
-    color: white;
+    color: black;
+    text-shadow: 2px 2px 6px #D3D3D3;
 }
 
 .navbar-brand {
@@ -36,13 +37,25 @@ a {
     padding-top: 5%;
 }
 
+#user {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 4%;
+    padding-bottom: 15%;
+}
+
+
 #profile {
     background-color: lightyellow;
     width: 100%;
     height: 100%;
+    background-color: rgba(0,0,0,.1);
+    border-radius: 9px;
+    box-shadow: 0 2px 10px rgba(0,0,0,.3);
 }
 
-#profile-container {
+#profileImage {
     width: 150px;
     height: 150px;
     overflow: hidden;
@@ -52,22 +65,26 @@ a {
     -o-border-radius: 50%;
     border-radius: 50%;
     background-color: lightslategray;
+    margin-left: 3%;
+    margin-top: 3%;
 }
 
 #user-info {
     display: flex;
-    width: 100%;
-    height: 100%;
     margin-top: 6%;
+    margin-left: 3%;
 }
 
 #concert {
     display: flex;
+    margin-top: 6%;
+    margin-left: 6%;
+    margin-bottom: 5%;
 }
 
 .add-concert {
     cursor: pointer;
-    background-color: #3498db;
+    background-color: #1eb954;
     color: #fff;
     border-radius: 4px;
     display: block;
@@ -75,9 +92,13 @@ a {
     padding: 10px;
     margin-top: 20px;
     width: 40%;
+    right: 8%;
+    bottom: 3%;
+    position: absolute;
 }
 
 #map {
     height: 600px;
-    margin-top: 20px;
+    border-radius: 9px;
+    box-shadow: 0 2px 10px rgba(0,0,0,.3);
 }
