--- a/views/profile.html
+++ b/views/profile.html
@@ -33,7 +33,7 @@
     </div>
     </nav>
     <div class="container">
-        <div class="row">
+        <div class="row" id="user">
             <div class="col-xs-12 col-md-6">
                 <div id="profile">
                     <div id="profile-container">
@@ -48,12 +48,12 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col" id="concert">
+                        <div class="col-md-12" id="concert">
                             <p>Concerts</p>
                             <p></p>
                         </div>
+                        <button class="add-concert">Add Concert</button>
                     </div>
-                    <button class="add-concert">Add Concert</button>
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
