--- a/views/login.html
+++ b/views/login.html
@@ -36,7 +36,7 @@
                 <img  src="../images/singer-with-microphone-like-karaoke-desing-neon-style_24908-60791.jpg" alt="singer">
             </div>
             <div class="col-md-6" id="form">
-                <form class="form">
+                <form class="form" id="registerForm">
                     <h5 >Login</h5>
                     <div class="form-group">
                         <label for="username">Username</label>
