--- a/views/addconcert.html
+++ b/views/addconcert.html
@@ -48,7 +48,9 @@
                 <label for="concertBuddies">Concert Buddies</label>
                 <input type="text" class="form-control" id="concertBuddies" placeholder="Who did you go with?">
             </div>
-            <button id="play">Press Play</button><button id="stop">Press Pause</button>
+            <div class="buttons">
+                <button class="stop">Press Pause</button><button class="play">Press Play</button>
+            </div>
         </form>
     </div>
 
