--- a/public/styles/addconcert.css
+++ b/public/styles/addconcert.css
@@ -8,6 +8,12 @@
     outline: 0;
 }
 
+.navbar {
+    -webkit-box-shadow: 0 8px 6px -6px #999;
+    -moz-box-shadow: 0 8px 6px -6px #999;
+    box-shadow: 0 8px 6px -6px #999;
+}
+
 .navbar-brand {
     font-family: 'Patua One', cursive;
     color: white;
@@ -39,6 +45,7 @@ body {
 h1 {
     font-family: 'Patua One', cursive;
     color: white;
+    text-shadow: 2px 2px 6px #000000;
     font-size: 400%;
     padding-top: 5%;
     padding-left: 3%;
@@ -76,18 +83,32 @@ h1 {
     border-color: #777;
 }
 
-.form button {
+.play {
     cursor: pointer;
     background-color: #1eb954;
+    margin-bottom: 5%;
+    margin-left: 2%;
     color: #fff;
     border-radius: 4px;
     display: block;
     font-size: 14px;
     padding: 10px;
     margin-top: 20px;
-    width: 40%;
+    width: 30%;
+    float: right;
 }
 
-.stop stop {
-    background-color: f37f79;
+.stop {
+    cursor: pointer;
+    background-color: #f37f79;
+    margin-bottom: 5%;
+    margin-left: 2%;
+    color: #fff;
+    border-radius: 4px;
+    display: block;
+    font-size: 14px;
+    padding: 10px;
+    margin-top: 20px;
+    width: 30%;
+    float: right;
 }
