--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -9,17 +9,26 @@
 }
 
 body {
-    background-color: whitesmoke;
+    background: rgb(131,58,180);
+    background: radial-gradient(circle, rgba(252,176,69,1) 0%, rgba(253,29,29,1) 50%, rgba(131,58,180,1) 100%);
+    font-family: 'Noto Sans SC', sans-serif;
 }
 
+
 a {
-    color: black;
-    text-shadow: 2px 2px 6px #D3D3D3;
+    color: white;
+    text-shadow: 2px 2px 6px #000000;
+}
+
+.navbar {
+    -webkit-box-shadow: 0 8px 6px -6px #999;
+    -moz-box-shadow: 0 8px 6px -6px #999;
+    box-shadow: 0 8px 6px -6px #999;
 }
 
 .navbar-brand {
     font-family: 'Patua One', cursive;
-    color: black;
+    color: white;
 }
 .navbar-nav {
     list-style-type: none;
@@ -50,7 +59,7 @@ a {
     background-color: lightyellow;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,.1);
+    background-color: white;
     border-radius: 9px;
     box-shadow: 0 2px 10px rgba(0,0,0,.3);
 }
