--- a/views/signup.html
+++ b/views/signup.html
@@ -39,6 +39,10 @@
                 <form class="form">
                     <h5 >Sign Up</h5>
                     <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" class="form-control" id="username" placeholder="Enter email">
+                    </div>
+                    <div class="form-group">
                         <label for="username">Username</label>
                         <input type="text" class="form-control" id="username" placeholder="Enter username">
                     </div>
