--- a/views/profile.html
+++ b/views/profile.html
@@ -17,7 +17,6 @@
 <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/index">concertVAULT</a>
-
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
         <li class="nav-item active">
@@ -32,6 +31,7 @@
         </ul>
     </div>
     </nav>
+    <h1>Profile</h1>
     <div class="container">
         <div class="row" id="user">
             <div class="col-xs-12 col-md-6">
@@ -40,10 +40,10 @@
                         <image id="profileImage" />
                     </div>
                     <div class="row" id="user-info">
-                        <div class="col-md-6">
+                        <div class="col-md-6" id="name">
                             <p>Name Here</p> 
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6" id="member">
                             <p>Member since </p> 
                         </div>
                     </div>
