--- a/public/styles/addconcert.css
+++ b/public/styles/addconcert.css
@@ -9,6 +9,9 @@
 }
 
 .navbar {
+    position: fixed;
+    width: 100%;
+    top: 0;
     -webkit-box-shadow: 0 8px 6px -6px #999;
     -moz-box-shadow: 0 8px 6px -6px #999;
     box-shadow: 0 8px 6px -6px #999;
@@ -47,7 +50,7 @@ h1 {
     color: white;
     text-shadow: 2px 2px 6px #000000;
     font-size: 400%;
-    padding-top: 5%;
+    padding-top: 8%;
     padding-left: 3%;
 }
 
@@ -64,13 +67,13 @@ h1 {
 }
 
 .form-control label {
-    color: #777;
+    color: #000000;
     display: block;
     margin-bottom: 5px;
 }
 
 .form-control input {
-    border: 2px solid #f0f0f0;
+    border: 2px solid #000000;
     border-radius: 4px;
     display: block;
     width: 100%;
@@ -80,7 +83,7 @@ h1 {
 
 .form-control input:focus {
     outline: 0;
-    border-color: #777;
+    border-color: #000000;
 }
 
 .play {
