--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -8,19 +8,10 @@
     outline: 0;
 }
 
-body {
-    background: rgb(131,58,180);
-    background: radial-gradient(circle, rgba(252,176,69,1) 0%, rgba(253,29,29,1) 50%, rgba(131,58,180,1) 100%);
-    font-family: 'Noto Sans SC', sans-serif;
-}
-
-
-a {
-    color: white;
-    text-shadow: 2px 2px 6px #000000;
-}
-
 .navbar {
+    position: fixed;
+    width: 100%;
+    top: 0;
     -webkit-box-shadow: 0 8px 6px -6px #999;
     -moz-box-shadow: 0 8px 6px -6px #999;
     box-shadow: 0 8px 6px -6px #999;
@@ -41,9 +32,29 @@ a {
     padding-top: 15px;
 }
 
+body {
+    background: rgb(131,58,180);
+    background: radial-gradient(circle, rgba(252,176,69,1) 0%, rgba(253,29,29,1) 50%, rgba(131,58,180,1) 100%);
+    font-family: 'Noto Sans SC', sans-serif;
+}
+
+
+a {
+    color: white;
+    text-shadow: 2px 2px 6px #000000;
+}
+
+h1 {
+    font-family: 'Patua One', cursive;
+    color: white;
+    text-shadow: 2px 2px 6px #000000;
+    font-size: 400%;
+    padding-top: 8%;
+    padding-left: 3%;
+}
+
 .container {
     font-family: 'Noto Sans', cursive;
-    padding-top: 5%;
 }
 
 #user {
@@ -76,6 +87,16 @@ a {
     background-color: lightslategray;
     margin-left: 3%;
     margin-top: 3%;
+}
+
+#name {
+    font-family: 'Patua One', cursive;
+    font-size: x-large;
+}
+
+#member {
+    font-family: 'Patua One', cursive;
+    font-size: x-large;
 }
 
 #user-info {
