--- a/public/styles/signup.css
+++ b/public/styles/signup.css
@@ -13,6 +13,9 @@ a {
 }
 
 .navbar {
+    position: fixed;
+    width: 100%;
+    top: 0;
     -webkit-box-shadow: 0 8px 6px -6px #999;
     -moz-box-shadow: 0 8px 6px -6px #999;
     box-shadow: 0 8px 6px -6px #999;
