--- a/views/index.html
+++ b/views/index.html
@@ -17,9 +17,6 @@
     <a class="navbar-brand" href="/index">concertVAULT</a>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <!-- <li class="nav-item active">
-          <a class="nav-link" href="/index">Home <span class="sr-only">(current)</span></a>
-        </li> -->
         <li class="nav-item">
           <a class="nav-link" href="/signup">Sign Up</a>
         </li>
@@ -33,14 +30,17 @@
   <container class="description">
     <h3>Store your concert memories in concertVAULT</h3>
   </container>
-  <container class="container">
-    <section>
-      <form class="form-inline">
-        <input class="form-control" id="search" type="search" placeholder="Artist/Concert/Venue" aria-label="Search">
-        <button class="btn" type="submit">Search</button>
-      </form>
-    </section>
-  </container>
+  <form>
+    <div class="form-row align-items-center">
+      <div class="col-sm-6">
+        <label class="sr-only" for="inlineFormInput">Name</label>
+        <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="Artist/Concert/Venue">
+      </div>
+      <div class="col-auto">
+        <button type="submit" class="btn btn-primary mb-2">Search</button>
+      </div>
+    </div>
+  </form>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
