begin lat/long map placement for profile screen

--- a/views/profile.html
+++ b/views/profile.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="/styles/profile.css">
+    <!-- jQuery -->
+    <script defer src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
     <!-- Google Maps API -->
     <script defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCHMNvp5mo44CBUMlTD72eqo53LYdde1IA"></script>
     <!-- CUSTOM JS -->
