--- a/public/styles/addconcert.css
+++ b/public/styles/addconcert.css
@@ -8,8 +8,9 @@
     outline: 0;
 }
 
+/* -------- Navbar Styling -------- */
 .navbar {
-    position: fixed;
+
     width: 100%;
     top: 0;
     -webkit-box-shadow: 0 8px 6px -6px #999;
@@ -50,14 +51,15 @@ h1 {
     color: white;
     text-shadow: 2px 2px 6px #000000;
     font-size: 400%;
-    padding-top: 8%;
+    padding-top: 5%;
     padding-left: 3%;
 }
 
+/* -------- Concert Form Styling -------- */
 .container {
     background-color: rgba(0,0,0,.3);
     border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0,0,0,.3);
+    box-shadow: 0 2px 10px rgba(0,0,0,.6);
     width: 800px;
     margin-top: 5%;
 }
@@ -86,13 +88,13 @@ h1 {
     border-color: #000000;
 }
 
-.play {
+#play {
     cursor: pointer;
     background-color: #1eb954;
     margin-bottom: 5%;
     margin-left: 2%;
     color: #fff;
-    border-radius: 4px;
+    border-radius: 20px;
     display: block;
     font-size: 14px;
     padding: 10px;
@@ -101,13 +103,13 @@ h1 {
     float: right;
 }
 
-.stop {
+#stop {
     cursor: pointer;
     background-color: #f37f79;
     margin-bottom: 5%;
     margin-left: 2%;
     color: #fff;
-    border-radius: 4px;
+    border-radius: 20px;
     display: block;
     font-size: 14px;
     padding: 10px;
