--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -8,8 +8,8 @@
     outline: 0;
 }
 
+/* -------- Navbar Styling -------- */
 .navbar {
-    position: fixed;
     width: 100%;
     top: 0;
     color: white;
@@ -40,11 +40,12 @@ body {
     font-family: 'Noto Sans', cursive;
 }
 
+/* -------- Logo Styling -------- */
 h1 {
     font-family: 'Patua One', cursive;
     color: white;
     font-size: 600%;
-    padding-top: 8%;
+    padding-top: 5%;
     padding-left: 3%;
 }
 
@@ -59,6 +60,7 @@ a {
     -webkit-text-stroke-color: white;
 }
 
+/* -------- Description Styling -------- */
 .description {
     display: flex;
     flex-direction: row;
@@ -75,6 +77,7 @@ h3 {
     font-size: 400;
 }
 
+/* -------- Searchbar Styling -------- */
 .form-row {
     display: flex;
     flex-direction: row;
@@ -82,18 +85,11 @@ h3 {
     padding-top: 3%;
 }
 
-/* #search {
-    width: 60%;
-    padding: 10px;
-    text-align: right;
-    padding-right: 4%;
-} */
-
 .btn {
     cursor: pointer;
     background-color: #3498db;
     color: #fff;
-    border-radius: 4px;
+    border-radius: 20px;
     display: block;
     font-size: 14px;
 }
