--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -12,8 +12,8 @@ a {
     color: white;
 }
 
+/* -------- Navbar Styling -------- */
 .navbar {
-    position: fixed;
     width: 100%;
     top: 0;
     -webkit-box-shadow: 0 8px 6px -6px #999;
@@ -48,11 +48,12 @@ h1 {
     color: white;
     text-shadow: 2px 2px 6px #000000;
     font-size: 300%;
-    padding-top: 8%;
+    padding-top: 5%;
     padding-left: 3%;
     padding-bottom: 3%;
 }
 
+/* -------- Login Card Styling -------- */
 .container {
     display: flex;
     flex-direction: row;
@@ -76,6 +77,7 @@ img {
     padding-right: 0;
 }
 
+/* -------- Login Form Styling -------- */
 #form {
     background-color: rgba(0,0,0,.4);
     border-radius: 0 9px 9px 0;
@@ -87,12 +89,12 @@ img {
 h5 {
     color: white;
     font-size: 25px;
-    padding-top: 19%;
-    padding-left: 5%;
+    padding-top: 13%;
+    padding-left: 2%;
 }
 
 .form-group {
-    padding-left: 5%;
+    padding-left: 2%;
 }
 
 #form label {
@@ -124,7 +126,7 @@ h5 {
     cursor: pointer;
     background-color: #1eb954;
     color: #fff;
-    border-radius: 4px;
+    border-radius: 20px;
     display: block;
     font-size: 14px;
     padding: 7px;
