--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -8,8 +8,8 @@
     outline: 0;
 }
 
+/* -------- Navbar Styling -------- */
 .navbar {
-    position: fixed;
     width: 100%;
     top: 0;
     -webkit-box-shadow: 0 8px 6px -6px #999;
@@ -49,10 +49,11 @@ h1 {
     color: white;
     text-shadow: 2px 2px 6px #000000;
     font-size: 400%;
-    padding-top: 8%;
+    padding-top: 5%;
     padding-left: 3%;
 }
 
+/* -------- Profile Section Styling -------- */
 .container {
     font-family: 'Noto Sans', cursive;
 }
@@ -67,10 +68,10 @@ h1 {
 
 
 #profile {
-    background-color: lightyellow;
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: rgba(0,0,0,.8);
+    color: white;
     border-radius: 9px;
     box-shadow: 0 2px 10px rgba(0,0,0,.3);
 }
@@ -84,12 +85,12 @@ h1 {
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
     border-radius: 50%;
-    background-color: lightslategray;
+    background-color: white;
     margin-left: 3%;
     margin-top: 3%;
 }
 
-#name {
+#email {
     font-family: 'Patua One', cursive;
     font-size: x-large;
 }
@@ -112,11 +113,11 @@ h1 {
     margin-bottom: 5%;
 }
 
-.add-concert {
+#add-concert {
     cursor: pointer;
     background-color: #1eb954;
     color: #fff;
-    border-radius: 4px;
+    border-radius: 20px;
     display: block;
     font-size: 14px;
     padding: 10px;
@@ -127,6 +128,7 @@ h1 {
     position: absolute;
 }
 
+/* -------- Google Maps Styling -------- */
 #map {
     height: 600px;
     border-radius: 9px;
