--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
   <title>concertVAULT</title>
 </head>
 <body>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/index">concertVAULT</a>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
@@ -37,7 +37,7 @@
         <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="Artist/Concert/Venue">
       </div>
       <div class="col-auto">
-        <button type="submit" class="btn btn-primary mb-2">Search</button>
+        <button type="submit" class="btn btn-pill mb-2">Search</button>
       </div>
     </div>
   </form>
