--- a/views/login.html
+++ b/views/login.html
@@ -13,7 +13,7 @@
     <title>concertVAULT</title>
 </head>
 <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/index">concertVAULT</a>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
@@ -40,7 +40,7 @@
                         <label for="password">Password</label>
                         <input type="password" class="form-control" id="password" placeholder="Password">
                     </div>
-                    <button type="submit" class="btn btn-primary" id="button">Submit</button>
+                    <button type="submit" class="btn btn-pill" id="button">Submit</button>
                 </form>
             </div>
         </div>
