--- a/views/login.html
+++ b/views/login.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="/styles/login.css">
-    <!-- CUSTOM JS -->
-    <script src="/scripts/login.js"></script>
+    <!-- LOGIN JS -->
+    <script defer src="/scripts/login.js"></script>
     <title>concertVAULT</title>
 </head>
 <body>
@@ -30,7 +30,7 @@
                 <img  src="../images/girl-singer-neon-sign_1262-19543.jpg" alt="singer">
             </div>
             <div class="col-md-6" id="form">
-                <form class="form" id="registerForm">
+                <form class="form" id="loginForm">
                     <h5 >Login</h5>
                     <div class="form-group">
                         <label for="username">Username</label>
