--- a/views/addconcert.html
+++ b/views/addconcert.html
@@ -35,6 +35,10 @@
     <div class="container">
         <form class="form">
             <div class="form-group">
+                <label for="artist">Artist</label>
+                <input class="form-control" type="text" id="artist">
+            </div>
+            <div class="form-group">
                 <label for="example-date-input">Date</label>
                 <input class="form-control" type="date" value="2020-02-04" id="example-date-input">
             </div>
