--- a/views/signup.html
+++ b/views/signup.html
@@ -35,8 +35,8 @@
                 <form class="form" id="signupForm">
                     <h5 >Sign Up</h5>
                     <div class="form-group">
-                        <label for="frmEmailA">Email</label>
-                        <input type="email" name="email" class="form-control" id="frmEmailA" placeholder="Enter email" required autocomplete="email">
+                        <label for="email">Email</label>
+                        <input type="email" name="email" class="form-control" id="email" placeholder="Enter email" required autocomplete="email">
                     </div>
                     <div class="form-group">
                         <label for="username">Username</label>
