--- a/views/addconcert.html
+++ b/views/addconcert.html
@@ -30,7 +30,7 @@
     </nav>
     <h1>Enter Concert Information</h1>
     <div class="container">
-        <form class="form">
+        <form class="form" id="addConcert">
             <div class="form-group">
                 <label for="artist">Artist</label>
                 <input class="form-control" type="text" id="artist" placeholder="Who did you see?">
@@ -61,7 +61,7 @@
                 <input type="text" class="form-control" id="concertBuddies" placeholder="Who did you go with?">
             </div>
             <div class="buttons">
-                <button class="btn btn-pill" id="play">Press Play</button>
+                <button type="submit" class="btn btn-pill" id="play">Press Play</button>
             </div>
         </form>
     </div>
