adds update profile, delete profile, log out, and remove search

--- a/views/index.html
+++ b/views/index.html
@@ -30,7 +30,7 @@
   <container class="description">
     <h3>Store your concert memories in concertVAULT</h3>
   </container>
-  <form>
+  <!-- <form>
     <div class="form-row align-items-center">
       <div class="col-sm-6">
         <label class="sr-only" for="inlineFormInput">Name</label>
@@ -40,7 +40,7 @@
         <button type="submit" class="btn btn-pill mb-2">Search</button>
       </div>
     </div>
-  </form>
+  </form> -->
   <footer class="footer">
     <div>
       <span>&copy; concertVAULT 2020</span>
