--- a/views/profile.html
+++ b/views/profile.html
@@ -21,9 +21,16 @@
         <a class="navbar-brand" href="/index">concertVAULT</a>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link" type="logout" href="/index">Logout</a>
-        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Profile Options
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" type="logout" href="/index">Log out</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" type="delete" href="/index">Delete Profile</a>
+            </div>
+            </li>
         </ul>
     </div>
     </nav>
@@ -35,6 +42,11 @@
                     <div id="profile-container">
                         <image id="profileImage" />
                     </div>
+                    <div class="row">
+                        <div class="col-md-12" id="update">
+                            <button type="button" class= "btn btn-pill btn-sm" id="updateProfile" href="/:id">Update Profile</button>
+                        </div>
+                        </div>
                     <div class="row" id="user-info">
                         <div class="col-md-6" id="email">
                             <p>Email Here</p> 
