Creates CONCERT and appends CONCERT ID to USER CONCERTS array. Renders CONCERT ID to DOM but not concert reference

--- a/views/profile.html
+++ b/views/profile.html
@@ -56,10 +56,10 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-12" id="concert">
+                        <div class="col-md-12" id="concerts">
                             <p>Concerts</p>
                         </div>
-                        <button class= "btn btn-pill" id="add-concert" href="/addconcert">Add Concert</button>
+                        <a class= "btn btn-pill" id="add-concert" href="/addconcert">Add Concert</a>
                     </div>
                 </div>
             </div>
