--- a/views/addconcert.html
+++ b/views/addconcert.html
@@ -19,12 +19,12 @@
         <a class="navbar-brand" href="/index">concertVAULT</a>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-        <li class="nav-item">
+        <!-- <li class="nav-item">
             <a class="nav-link" href="/signup">Sign Up</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/login">Login</a>
-            </li>
+            </li> -->
         </ul>
     </div>
     </nav>
