deletes user through profile

--- a/views/profile.html
+++ b/views/profile.html
@@ -26,9 +26,9 @@
                 Profile Options
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" type="logout" href="/index">Log out</a>
+                <a class="dropdown-item" id="logout" type="logout" href="/index">Log out</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" type="delete" href="/index">Delete Profile</a>
+                <a class="dropdown-item" id="delete" type="delete" href="/index">Delete Profile</a>
             </div>
             </li>
         </ul>
